--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,68 @@
 .ant-layout .ant-layout-header {
     /* width: 375px; */
-    height: 64px;
+    height: 4em;
     background-color: #136AFB;
 }
-.form {
-    width: 346px;
-    height: 939px;
-    margin: auto;
+.ant-layout-content, body {
+    background-image: url(./images/1440.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.form_cover {
     background-color: white;
-    
-    border-radius: 16px
+    border-radius: 1em
+}
+
+
+.ant-input-affix-wrapper, .ant-picker, .ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
+    border-radius: 0.313em;
+}
+/* Mobile */
+@media screen  and (max-width: 23.438em){
+    .form_cover{
+        margin: 1.5em auto 8.688em auto;
+        min-width: 21.625em;
+        height: 58.688em;
+        /* line-height: 58.688em;
+        text-align: center; */
+    }
+    .form {
+        margin: 0.125em;
+    }
+    .ant-input-affix-wrapper, .ant-picker, .ant-select-single:not(.ant-select-customize-input) .ant-select-selector, .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+        height: 2.5em;
+        line-height: 2.5em;
+        text-align: left;
+    }
+    .ke {
+        margin: 0 0 0.938em 0;
+    }
+}
+/* Tablet */
+@media screen and (min-width: 23.5em) and (max-width: 48em) {
+    .form_cover {
+        margin: 6.250em auto 21.625em auto;
+        width: 46em;
+        height: 37.938em;
+    }
+    .change_layout {
+        width: 46em;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .form {
+        margin: 2.063em;
+    }
+    .ant-input-affix-wrapper, .ant-picker, .ant-select-single:not(.ant-select-customize-input) .ant-select-selector, .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+        width: 100%;
+    }
+    .ke {
+        display: none;
+    }
+    .signup_btn {
+        width: 60%;
+    }
+
 }
