--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,81 @@
 .ant-layout .ant-layout-header {
-    /* width: 375px; */
     height: 4em;
     background-color: #136AFB;
 }
 .ant-layout-content, body {
-    background-image: url(./images/1440.png);
+    /* background-image: url(./images/375.png); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 .form_cover {
-    background-color: white;
-    border-radius: 1em
+    background-color: #FFFFFF;
+    border-radius: 1em;
+    margin: 1.5em auto 8.688em auto;
+    width: 21.625em;
+    height: 58.688em;
+    box-shadow: 3px 17px 32px rgba(19, 106, 251, 0.3);
 }
-
-
+.form {
+    margin: 0 0.125em;
+}
+.form_title {
+    margin: 0 1.563em;
+    height: 7em;
+    display: flex;
+    justify-content: center;
+}
+.logo {
+    width: 4em;
+    height: 4em;
+    margin-top: 0.625em;
+}
+.ant-input-affix-wrapper, .ant-picker, .ant-select-single:not(.ant-select-customize-input) .ant-select-selector, .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+    height: 2.5em;
+    line-height: 2.5em;
+    text-align: left;
+}
+.ke {
+    color: #BEC6EE;
+    margin: 0 0 0.938em 0;
+}
+.signup_btn {
+        width: 100%;
+    }
 .ant-input-affix-wrapper, .ant-picker, .ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
     border-radius: 0.313em;
 }
-/* Mobile */
-@media screen  and (max-width: 23.438em){
-    .form_cover{
-        margin: 1.5em auto 8.688em auto;
-        min-width: 21.625em;
-        height: 58.688em;
-        /* line-height: 58.688em;
-        text-align: center; */
-    }
-    .form {
-        margin: 0.125em;
-    }
-    .ant-input-affix-wrapper, .ant-picker, .ant-select-single:not(.ant-select-customize-input) .ant-select-selector, .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
-        height: 2.5em;
-        line-height: 2.5em;
-        text-align: left;
-    }
-    .ke {
-        margin: 0 0 0.938em 0;
-    }
+.mobile {
+    width: 100%;
+    /* height: 105px; */
+    position: fixed;
+    bottom: 0;
+}
+/* FormSignUp */
+/* ============================================== */
+
+.formresult_cover {
+    width: 343px;
+    height: 423px;
+    border-radius: 16px;
+    background-color: #FFFFFF;
+    margin: 131px auto 194px auto;
 }
 /* Tablet */
 @media screen and (min-width: 23.5em) and (max-width: 48em) {
+    .ant-layout .ant-layout-header {
+        height: 5em;
+    }
+    body {
+        height: 65.813;
+    }
     .form_cover {
-        margin: 6.250em auto 21.625em auto;
         width: 46em;
         height: 37.938em;
+        margin: 6.250em auto 21.625em auto;
     }
-    .change_layout {
-        width: 46em;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+    .form_title {
+        height: 5.5em; 
     }
     .form {
         margin: 2.063em;
@@ -61,8 +86,26 @@
     .ke {
         display: none;
     }
-    .signup_btn {
-        width: 60%;
+    .ant-layout-content, body {
+    background-image: url(./images/1440.png);
     }
-
+}
+@media screen and (min-width: 48.063em) {
+    .ant-layout .ant-layout-header {
+        height: 5em;
+    }
+    .ke {
+        display: none;
+    } 
+    .form_cover {
+        width: 53.375em;
+        height: 37.938em;
+        margin: 3.75em auto 17.313em auto;
+    }
+    .form {
+        margin: 0 3.188em;
+    }
+     .ant-layout-content, body {
+    background-image: url(./images/1920.png);
+    }
 }
