--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,11 @@
     border-radius: 1em;
     margin: 1.5em auto 8.688em auto;
     width: 21.625em;
-    height: 58.688em;
+    height: 55.688em;
     box-shadow: 0.188em 1.063em 2em rgba(19, 106, 251, 0.3);
 }
 .form {
-    margin: 0 0.125em;
+    margin: 0 0.438em;
 }
 .form_title {
     margin: 0 1.563em;
@@ -42,6 +42,7 @@
 }
 .signup_btn {
         width: 100%;
+        /* margin-top: 15px;  */
     }
 .ant-input-affix-wrapper, .ant-picker, .ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
     border-radius: 0.313em;
