--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 .ant-layout-content {
     background-color: #F9FAFF;
-    background-image: url(./images/375.png);
+    background-image: url(./components/images/375.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -115,7 +115,7 @@
         display: none;
     }
     .ant-layout-content {
-        background-image: url(./images/1440.png);
+        background-image: url(./components/images/1440.png);
     }
 
     /* =========================== */
@@ -140,7 +140,7 @@
         margin:0 3.188em;
     }
     .ant-layout-content {
-    background-image: url(./images/1920.png);
+    background-image: url(./components/images/1920.png);
     }
     .formresult_cover {
         width: 28.938em;
